Add systemDefaultRegistry configuration for Rancher and cert-manager airgap deployments
- Add systemDefaultRegistry to Rancher Helm values to use private_registry_url in airgap
- Configure cert-manager to pull images from private registry when available
- Fixes Rancher deployment hanging when images cannot be pulled from internet in airgap environments
- Falls back to public registries when private_registry_url is not defined

--- a/ansible/rke2/airgap/roles/rancher_helm_deploy/defaults/main.yml
+++ b/ansible/rke2/airgap/roles/rancher_helm_deploy/defaults/main.yml
@@ -32,6 +32,8 @@ rancher_helm_values:
   ingress:
     tls:
       source: "{{ rancher_tls_source }}"
+  # Airgap registry configuration - override with private_registry_url variable
+  systemDefaultRegistry: "{{ private_registry_url | default('') }}"
 
 # Advanced configuration
 rancher_advanced_values: {}
