Fix target_group defaults to match inventory group names
- Changed first playbook default from 'rancher' to 'airgap_nodes'
- Changed second playbook default from 'rancher' to 'rke2_servers'
- Fixes error: object of type 'dict' has no attribute 'rancher'
- Matches actual inventory structure from tofu airgap module

--- a/ansible/rke2/airgap/playbooks/deploy/rke2-tarball-playbook.yml
+++ b/ansible/rke2/airgap/playbooks/deploy/rke2-tarball-playbook.yml
@@ -82,7 +82,7 @@
 
   vars:
     # Enable RKE2 installation
-    target_group: "{{ target | default('rancher') }}"
+    target_group: "{{ target | default('airgap_nodes') }}"
     enable_rke2_installation: true
 
   pre_tasks:
@@ -185,7 +185,7 @@
   become: true
   gather_facts: true
   vars:
-    target_group: "{{ target | default('rancher') }}"
+    target_group: "{{ target | default('rke2_servers') }}"
 
   tasks:
     - name: Extract Kubernetes version from RKE2 version
